--- a/ray tracing in one weekend/README
+++ b/ray tracing in one weekend/README
@@ -39,7 +39,7 @@ int main() {
                         如果没有发生散射，则返回黑色
                  如果传入的光线（可能是经过反射散射后的）没有与物体相交，返回天空的颜色（可能会在前面乘以衰减系数）；
         将迭代后的颜色加入color
-    采样100次
+    采样100次，对color取平均，输出写入xxx文件
 
     
 
