--- a/ray tracing in next week/README
+++ b/ray tracing in next week/README
@@ -1,4 +1,4 @@
-整理这篇Ray tracing in one weekend 的思路，介绍整套程序运行的步骤
+整理这篇Ray tracing in next week 的思路，介绍整套程序运行的步骤
 
 Features
     光线、可自定义的摄像机、背景、球体
@@ -6,7 +6,7 @@ Features
     材质（漫反射材质、金属材质、绝缘体玻璃球（折射））
     散焦模糊
 
-首先当然是main函数
+main函数部分除了初始化摄像机多了两个时间参数，其余和上一篇一样
 
 int main() {
 首先给定图像尺寸.宽200、高100、每个像素采样100次、光线最多散射50次
