--- a/ray tracing in next week/README
+++ b/ray tracing in next week/README
@@ -21,14 +21,17 @@ int main() {
             ray_color首先定义一个相交点结构rec
             要进行两个判断：1是散射次数大于50次返回黑色
             2是判断光线是否与物体相交（调用hittable_list类的hit函数，该hit函数会遍历hittable_list里的所有物体，对每一个物体调用该物体类下的hit函数判断是否相交）
-                如果相交，物体类下的hit函数会更新相交点rec的信息（包括：相交时间、位置、单位法线、法线朝向、材质指针，该指针由创建物体时传入（同时传入的参数有反照率、fuzz模糊程度），指向一个材质类（可以类比vec3类））
+                如果相交，///物体类下的hit函数会更新相交点rec的信息（包括：相交时间、位置、单位法线、法线朝向、材质指针，该指针由创建物体时传入（同时传入的参数有反照率、fuzz模糊程度），指向一个材质类（可以类比vec3类））
+                使用get_sphere_uv函数更新rec的uv坐标    
                     定义散射光线scattered以及衰减系数attenuation
-                    接着判断是否发生散射（调用rec的材质指针所指类的散射函数，传入scattered和attenuation）
-                    不同材质的散射函数不同，主要是更新scattered和attenuation。以金属材质为例：
+                    接着判断是否发生散射（调用rec的材质指针所指材质类的散射函数，传入scattered和attenuation）
+                    不同材质的散射函数不同，主要是更新scattered和attenuation。以材质为例：
                         先根据入射光线和法线计算反射光线，再根据交点位置和反射光线更新scattered，根据金属的反照率更新attenuation
-                        如果scattered与法线同方向则视为发生了散射，此时将更新后的scattered再次传入ray_color函数迭代计算，并乘以一个衰减率。
-                        经过多次迭代直到scattered不再射到物体上，执行返回天空颜色的步骤
-                        如果没有发生散射，则返回黑色
-                 如果传入的光线（可能是经过反射散射后的）没有与物体相交，返回天空的颜色（可能会在前面乘以衰减系数）；
+                        此时反照率是一个贴图类，在材质的scatter函数里调用贴图来更新attenuation
+                        将更新后的scattered再次传入ray_color函数迭代计算，并乘以一个衰减率。
+                        经过多次迭代直到scattered不再射到物体上，执行返回背景颜色的步骤
+                       
+                        如果没有发生散射，则返回该材质的发光项
+                 如果传入的光线（可能是经过反射散射后的）没有与物体相交，返回背景的颜色（可能会在前面乘以衰减系数）；
         将迭代后的颜色加入color
     采样100次，对color取平均，输出写入xxx文件
