--- a/ray tracing in next week/README
+++ b/ray tracing in next week/README
@@ -1,10 +1,18 @@
 整理这篇Ray tracing in next week 的思路，介绍整套程序运行的步骤
 
 Features
-    光线、可自定义的摄像机、背景、球体
+    光线、可自定义的摄像机、背景
+    物体：球体、移动的球体、矩形、包围盒
     多重采样抗锯齿
-    材质（漫反射材质、金属材质、绝缘体玻璃球（折射））
+    材质（漫反射材质、金属材质、绝缘体玻璃球（折射）、光源）
     散焦模糊
+    动态模糊
+    BVH包围盒加速
+    纹理，贴图
+    柏林噪声
+    旋转
+    体积体volumes
+    
 
 main函数部分除了初始化摄像机多了两个时间参数，其余和上一篇一样
 
