--- a/brdf_raytracing/笔记.md
+++ b/brdf_raytracing/笔记.md
@@ -10,5 +10,6 @@
 
 raytracingweek和101里面都是递归光线追踪
 是否使用PBR或者phong模型或者啥都没用看最后散射到光源或背景时使用的是哪一种光照模型
-101里使用的是phong模型，raytracingweek里啥都没用!
+101里使用的是lambert模型(散射)，raytracingweek里啥都没用!
+这里用的是101的方案
 
