--- a/brdf_raytracing/笔记.md
+++ b/brdf_raytracing/笔记.md
@@ -8,8 +8,8 @@
 光线生成那段两者不一样，为什么框架5里面的那么复杂，有必要吗？？？
 
 
-raytracingweek和101里面都是递归光线追踪
-是否使用PBR或者phong模型或者啥都没用看最后散射到光源或背景时使用的是哪一种光照模型
-101里使用的是lambert模型(散射)，raytracingweek里啥都没用!
+raytracingweek和101里面都是递归光线追踪，101中是递归中的路径追踪。
+关于BRDF是否使用PBR或者phong模型或者啥都没用看最后散射到光源或背景时使用的是哪一种光照模型
+101里使用的是散射模型，raytracingweek里啥都没用!
 这里用的是101的方案
 
