--- a/brdf_raytracing/笔记.md
+++ b/brdf_raytracing/笔记.md
@@ -10,6 +10,7 @@
 
 raytracingweek和101里面都是递归光线追踪，101中是递归中的路径追踪。
 关于BRDF是否使用PBR或者phong模型或者啥都没用看最后散射到光源或背景时使用的是哪一种光照模型
-101里使用的是散射模型，raytracingweek里啥都没用!
-这里用的是101的方案
+101作业7里使用的是散射模型，raytracingweek里啥都没用!
+这里用的是自定义的一组vec3，当使用了纹理时该值就是该点纹理的vec3。
+如果定义更多的材料，或者对每个材料传入测量过的brdf，就能实现pbr
 
